<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_plane"
        android:title="@string/avia_tickets" />

    <item
        android:id="@+id/hotelsFragment"
        android:icon="@drawable/ic_hotels"
        android:title="@string/hotels" />

    <item
        android:id="@+id/shortDistanceFragment"
        android:icon="@drawable/ic_short"
        android:title="@string/short_distance" />

    <item
        android:id="@+id/subscribesFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/subscribes" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>