<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_2"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/curtain_width"
        android:layout_height="@dimen/curtain_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_100"
        android:background="@drawable/bg_curtain_of_bottom_sheet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_150"
        android:background="@drawable/shape_searching_layout"
        android:orientation="vertical"
        android:padding="@dimen/normal_100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_width_height"
                android:layout_height="@dimen/icon_width_height"
                android:src="@drawable/ic_plane_from_where" />

            <TextView
                android:id="@+id/et_from_wher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/small_100"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="Минск"
                android:textAppearance="@style/ButtonText1"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_100"
            android:background="@color/grey_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/et_from_where_first_screen"
            app:layout_constraintTop_toBottomOf="@id/et_from_where_first_screen" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="@dimen/icon_width_height"
                android:layout_height="@dimen/icon_width_height"
                android:contentDescription="Search"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/et_place_of_arrival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_100"
                android:background="@android:color/transparent"
                android:digits=" йцукенгшщзхъфывапролджэячсмитьбюЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЧСМИТЬБЮ"
                android:hint="@string/hint_to_where"
                android:textAppearance="@style/ButtonText1"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/text_cursor_drawable"
                app:layout_constraintBottom_toBottomOf="@id/iv_search"
                app:layout_constraintEnd_toStartOf="@id/iv_clear"
                app:layout_constraintStart_toEndOf="@id/iv_search"
                app:layout_constraintTop_toTopOf="@id/iv_search" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="@dimen/icon_width_height"
                android:layout_height="@dimen/icon_width_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Search"
                android:src="@drawable/ic_clear"
                app:layout_constraintBottom_toBottomOf="@id/iv_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_search"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_150">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tip_1"
                android:layout_width="@dimen/standard_icon_width_height"
                android:layout_height="@dimen/standard_icon_width_height"
                android:layout_gravity="center"
                android:background="@drawable/bg_ic_tip_1"
                android:padding="@dimen/small_150"
                android:src="@drawable/ic_tip_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dif_route"
                android:textAlignment="center"
                android:textAppearance="@style/Text2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tip_2"
                android:layout_width="@dimen/standard_icon_width_height"
                android:layout_height="@dimen/standard_icon_width_height"
                android:layout_gravity="center"
                android:background="@drawable/bg_ic_tip_2"
                android:padding="@dimen/small_150"
                android:src="@drawable/ic_tip_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/anywhere"
                android:textAlignment="center"
                android:textAppearance="@style/Text2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tip_3"
                android:layout_width="@dimen/standard_icon_width_height"
                android:layout_height="@dimen/standard_icon_width_height"
                android:layout_gravity="center"
                android:background="@drawable/bg_ic_tip_3"
                android:padding="@dimen/small_150"
                android:src="@drawable/ic_tip_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weekend"
                android:textAlignment="center"
                android:textAppearance="@style/Text2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tip_4"
                android:layout_width="@dimen/standard_icon_width_height"
                android:layout_height="@dimen/standard_icon_width_height"
                android:layout_gravity="center"
                android:background="@drawable/bg_ic_tip_4"
                android:padding="@dimen/small_150"
                android:src="@drawable/ic_tip_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hot_tickets"
                android:textAlignment="center"
                android:textAppearance="@style/Text2" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_150"
        android:background="@drawable/shape_searching_layout"
        android:orientation="vertical"
        android:padding="@dimen/normal_100">

        <LinearLayout
            android:id="@+id/ll_stambul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="@dimen/small_100">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/width_height_popular_place_pic"
                android:layout_height="@dimen/width_height_popular_place_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_stambul"
                app:shapeAppearanceOverlay="@style/OfferImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_100"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stambul"
                    android:textAppearance="@style/Title3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_commute"
                    android:textAppearance="@style/Text2"
                    android:textColor="@color/grey_5" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/et_from_where_first_screen"
            app:layout_constraintTop_toBottomOf="@id/et_from_where_first_screen" />

        <LinearLayout
            android:id="@+id/ll_sochi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="@dimen/small_100">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/width_height_popular_place_pic"
                android:layout_height="@dimen/width_height_popular_place_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_sochi"
                app:shapeAppearanceOverlay="@style/OfferImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_100"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sochi"
                    android:textAppearance="@style/Title3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_commute"
                    android:textAppearance="@style/Text2"
                    android:textColor="@color/grey_5" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/et_from_where_first_screen"
            app:layout_constraintTop_toBottomOf="@id/et_from_where_first_screen" />

        <LinearLayout
            android:id="@+id/ll_phuket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="@dimen/small_100">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/width_height_popular_place_pic"
                android:layout_height="@dimen/width_height_popular_place_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_phuket"
                app:shapeAppearanceOverlay="@style/OfferImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_100"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phuket"
                    android:textAppearance="@style/Title3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_commute"
                    android:textAppearance="@style/Text2"
                    android:textColor="@color/grey_5" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/et_from_where_first_screen"
            app:layout_constraintTop_toBottomOf="@id/et_from_where_first_screen" />

    </LinearLayout>

</LinearLayout>
